# AI-Agents-Projects

./: project.json
00_weather_agent/: ahmed_code.py  main.py  pyproject.toml
01_fullstack_weather_agent/backend/: .gitignore  project.json  pyproject.toml  requirements.txt
01_fullstack_weather_agent/backend/app/: bynextjs.py  main.py
01_fullstack_weather_agent/frontend/src/app/: page.tsx
01_fullstack_weather_agent/frontend/src/app/api/weather/: route.ts
01_fullstack_weather_agent/frontend/src/app/api/weather/stream-weather/: route.ts
01_fullstack_weather_agent/frontend/src/components/: chatUI.tsx
02_personal_study_assistant/: agents_file.py  hooks.py  main.py  pyproject.toml  setup_config.py  tools.py
